# joshuafayallen.github.io

./: .gitignore  .nojekyll  _quarto.yml  about.html  allen.scss  hello.py  index.html  index.qmd  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
blog/2025/passing-td-factor-model/: Formal-Writeup.ipynb  f_games.nc  f_season.nc  hello.py  index.html  index.qmd  index.rmarkdown  matplot-style.mplstyle  pyproject.toml  run.sh
blog/2025/passing-td-factor-model/idata/: zarr.json
blog/2025/passing-td-factor-model/idata/constant_data/: zarr.json
blog/2025/passing-td-factor-model/idata/observed_data/: zarr.json
blog/2025/passing-td-factor-model/idata/posterior/: zarr.json
blog/2025/passing-td-factor-model/idata/posterior_predictive/: zarr.json
blog/2025/passing-td-factor-model/idata/prior/: zarr.json
blog/2025/passing-td-factor-model/passing-mods-sandbox/: plotting-playground.R  rec_tds_ordered_logit_sandbox.py  receiving-yards-factor-model-sandbox.py  reception_tds_factors-logit-sandbox.py  yac-model-player-position-model.py
blog/2025/passing-td-factor-model/scripts/: __init__.py  clean_passer_data.py  ep_preprocess.py  process_common_fields.py  process_passers_df.py  process_rush_df.py  receivingtdsfactor.py  resolve_schemes.py  theme-allen-minimal.R
blog/2025/passing-td-factor-model/src/: download_data.py  processdat.py
blog/2025/passing-td-factor-model/writeup-dat/: create-trace-plot-data.py  ess.parquet  games-hsgp.parquet  modern-v-retired.parquet  rhats.parquet  seasons-hsgp.parquet
(+7121 files in other folders)
