[project]
name = "expected-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "bambi>=0.15.0",
    "cmdstanpy>=1.3.0",
    "graphviz>=0.21",
    "great-tables>=0.18.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jupyter>=1.1.1",
    "marimo>=0.17.5",
    "matplotlib==3.10.7",
    "nfl-data-py>=0.3.2",
    "nflreadpy>=0.1.3",
    "numpy>=2.2.6",
    "numpyro>=0.19.0",
    "nutpie[pymc]>=0.15.2",
    "palmerpenguins>=0.1.4",
    "plotnine>=0.15.0",
    "polars==1.35.2",
    "preliz[full,lab]==0.23.0",
    "pyarrow>=21.0.0",
    "pyjanitor>=0.31.0",
    "pymc==5.26.1",
    "pymc-extras>=0.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.5",
    "typing>=3.10.0.0",
    "wheel>=0.45.1",
    "xarray>=2025.8.0",
]
