[project]
name = "passing-td-factor-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "matplotlib>=3.10.7",
    "nflreadpy>=0.1.5",
    "nutpie>=0.16.3",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "xarray>=2025.11.0",
    "zarr>=3.1.3",
]
